fixed font 404 status error

--- a/css/setting.css
+++ b/css/setting.css
@@ -27,72 +27,63 @@ body {
   font-family: Morabba;
   font-style: normal;
   font-weight: 200;
-  src: url("fonts/woff/Morabba-UltraLight.woff") format("woff"),
-    url("fonts/woff2/Morabba-UltraLight.woff2") format("woff2");
+  src: url("../font/Morabba-UltraLight.woff") format("woff");
 }
 
 @font-face {
   font-family: Morabba;
   font-style: normal;
   font-weight: 300;
-  src: url("fonts/woff/Morabba-light.woff") format("woff"),
-    url("fonts/woff2/Morabba-light.woff2") format("woff2");
+  src: url("../font/Morabba-Light.woff") format("woff");
 }
 
 @font-face {
   font-family: Morabba;
   font-style: normal;
   font-weight: 500;
-  src: url("fonts/woff/Morabba-medium.woff") format("woff"),
-    url("fonts/woff2/Morabba-medium.woff2") format("woff2");
+  src: url("../font/Morabba-Medium.woff") format("woff");
 }
 
 @font-face {
   font-family: Morabba;
   font-style: normal;
   font-weight: 600;
-  src: url("fonts/woff/Morabba-semibold.woff") format("woff"),
-    url("fonts/woff2/Morabba-semibold.woff2") format("woff2");
+  src: url("../font/Morabba-SemiBold.woff") format("woff");
 }
 
 @font-face {
   font-family: Morabba;
   font-style: normal;
   font-weight: 800;
-  src: url("fonts/woff/Morabba-e trabold.woff") format("woff"),
-    url("fonts/woff2/Morabba-extrabold.woff2") format("woff2");
+  src: url("../font/Morabba-ExtraBold.woff") format("woff");
 }
 
 @font-face {
   font-family: Morabba;
   font-style: normal;
   font-weight: 850;
-  src: url("fonts/woff/Morabba-black.woff") format("woff"),
-    url("fonts/woff2/Morabba-black.woff2") format("woff2");
+  src: url("../font/Morabba-Black.woff") format("woff");
 }
 
 @font-face {
   font-family: Morabba;
   font-style: normal;
   font-weight: 900;
-  src: url("fonts/woff/Morabba-Heavy.woff") format("woff"),
-    url("fonts/woff2/Morabba-Heavy.woff2") format("woff2");
+  src: url("../font/Morabba-Heavy.woff") format("woff");
 }
 
 @font-face {
   font-family: Morabba;
   font-style: normal;
   font-weight: bold;
-  src: url("fonts/woff/Morabba-bold.woff") format("woff"),
-    url("fonts/woff2/Morabba-bold.woff2") format("woff2");
+  src: url("../font/Morabba-Bold.woff") format("woff");
 }
 
 @font-face {
   font-family: Morabba;
   font-style: normal;
   font-weight: normal;
-  src: url("fonts/woff/Morabba-regular.woff") format("woff"),
-    url("fonts/woff2/Morabba-regular.woff2") format("woff2");
+  src: url("../font/Morabba-Regular.woff") format("woff");
 }
 
 a {
