--- a/css/partials/tablet.css
+++ b/css/partials/tablet.css
@@ -32,6 +32,7 @@
     flex-direction: row;
     justify-content: space-between;
     gap: 60px;
+    position: relative;
   }
 
   div.header_right {
@@ -139,7 +140,6 @@
     position: relative;
     width: 48px;
     height: 48px;
-    background-color: #2a1454;
   }
   div.mobile_menu > span {
     transition: all 300ms ease-in-out;
@@ -152,7 +152,7 @@
     transform: translateY(-50%);
     width: 60%;
     height: 2px;
-    background-color: #fff;
+    background-color: var(--mrl-primery-color);
   }
   div.mobile_menu > span:nth-child(2) {
     position: absolute;
@@ -161,7 +161,7 @@
     transform: translateY(-50%);
     width: 70%;
     height: 2px;
-    background-color: #fff;
+    background-color: var(--mrl-primery-color);
   }
   div.mobile_menu > span:nth-child(3) {
     position: absolute;
@@ -170,7 +170,7 @@
     transform: translateY(-50%);
     width: 50%;
     height: 2px;
-    background-color: #fff;
+    background-color: var(--mrl-primery-color);
   }
 
   div.mobile_menu > span:nth-child(4) {
@@ -182,7 +182,7 @@
     transform-origin: left top;
     width: 0;
     height: 2px;
-    background-color: #fff;
+    background-color: var(--mrl-primery-color);
   }
 
   div.mobile_menu > span:nth-child(5) {
@@ -194,8 +194,54 @@
     transform-origin: right top;
     width: 0;
     height: 2px;
+    background-color: var(--mrl-primery-color);
+  }
+
+  div.dropdown_menu {
+    position: absolute;
+    top: 100%;
+    width: 100%;
+    height: fit-content;
+    background-color: var(--mrl-secondery-color);
+    z-index: 999;
+    border-radius: 24px;
+    padding: 24px 48px;
+    transition: all 300ms ease-in-out;
+  }
+
+  div.dropdown_menu > ul {
+    list-style: none;
+    display: flex;
+    justify-content: right;
+    align-items: start;
+    flex-direction: column;
+    gap: 16px;
+  }
+
+  div.dropdown_menu > ul > a {
+    color: white;
+    font-size: 18px;
+    position: relative;
+    padding: 12px 24px;
+    background: #000;
+  }
+
+  div.dropdown_menu > ul > a::before {
+    position: absolute;
+    content: " ";
+    right: 0px;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 12px;
+    height: 4px;
+    border-radius: 10px;
     background-color: #fff;
   }
+
+/* 
+  div.dropdown_menu > ul > a:hover {
+    color: var(--mrl-primery-color);
+  } */
 
   main.main > div {
     width: 100%;
@@ -813,8 +859,8 @@
     gap: 24px;
   }
 
-   /* my skills section ------------------------------------------- */
-   section.my_skill {
+  /* my skills section ------------------------------------------- */
+  section.my_skill {
     width: 100%;
     padding: 120px 0;
   }
@@ -909,7 +955,7 @@
     color: var(--mrl-primery-color);
   }
 
-  div.my_skill_item:hover div{
+  div.my_skill_item:hover div {
     border: 1px solid var(--mrl-primery-color);
     background-color: var(--mrl-secondery-color);
   }
