--- a/css/partials/desktop.css
+++ b/css/partials/desktop.css
@@ -132,6 +132,10 @@
     background-position: 100% 50%;
   }
 
+  div.mobile_menu,div.dropdown_menu {
+    display: none;
+  }
+
   main.main > div {
     width: 100%;
     position: relative;
@@ -745,103 +749,103 @@
     overflow: hidden;
   }
 
-    /* my skills section ------------------------------------------- */
-    section.my_skill {
-      width: 100%;
-      padding: 120px 0;
-    }
-  
-    div.my_skill_holder {
-      width: 100%;
-      margin: 0px auto;
-      display: flex;
-      flex-direction: column;
-      gap: 48px;
-    }
-    div.my_skill_top {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      gap: 16px;
-    }
-  
-    div.my_skill_top > h2 {
-      font-size: 44px;
-      background: linear-gradient(
-        260deg,
-        var(--mrl-secondery-color) 0%,
-        var(--mrl-primery-color) 100%
-      );
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      width: inherit;
-    }
-  
-    div.my_skill_top > p {
-      text-align: center;
-      width: 640px;
-      font-size: 16px;
-      color: #140c1c;
-    }
-  
-    div.my_skill_items {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 24px;
-    }
-  
-    div.my_skill_item {
-      width: fit-content;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 16px;
-    }
-  
-    div.my_skill_item > p {
-      font-size: 16px;
-      color: var(--mrl-primery-color);
-      font-weight: 300;
-    }
-  
-    div.my_skill_item > div {
-      padding: 32px 60px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      gap: 24px;
-      background-color: #f6f3fc;
-      border: 1px solid #f6f3fc;
-      border-radius: 24px;
-      transition: all 300ms ease-in-out;
-    }
-  
-    div.my_skill_item img {
-      width: 60px;
-      -webkit-filter: grayscale(90%);
-      transition: all 300ms ease-in-out;
-    }
-    div.my_skill_item span {
-      font-size: 20px;
-      font-weight: 800;
-      color: #747779;
-      transition: all 300ms ease-in-out;
-    }
-  
-    div.my_skill_item:hover img {
-      -webkit-filter: grayscale(0%);
-      scale: 1.1;
-    }
-  
-    div.my_skill_item:hover span {
-      color: var(--mrl-primery-color);
-    }
-  
-    div.my_skill_item:hover div{
-      border: 1px solid var(--mrl-primery-color);
-      background-color: var(--mrl-secondery-color);
-    }
+  /* my skills section ------------------------------------------- */
+  section.my_skill {
+    width: 100%;
+    padding: 120px 0;
+  }
+
+  div.my_skill_holder {
+    width: 100%;
+    margin: 0px auto;
+    display: flex;
+    flex-direction: column;
+    gap: 48px;
+  }
+  div.my_skill_top {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 16px;
+  }
+
+  div.my_skill_top > h2 {
+    font-size: 44px;
+    background: linear-gradient(
+      260deg,
+      var(--mrl-secondery-color) 0%,
+      var(--mrl-primery-color) 100%
+    );
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    width: inherit;
+  }
+
+  div.my_skill_top > p {
+    text-align: center;
+    width: 640px;
+    font-size: 16px;
+    color: #140c1c;
+  }
+
+  div.my_skill_items {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+  }
+
+  div.my_skill_item {
+    width: fit-content;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+  }
+
+  div.my_skill_item > p {
+    font-size: 16px;
+    color: var(--mrl-primery-color);
+    font-weight: 300;
+  }
+
+  div.my_skill_item > div {
+    padding: 32px 60px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+    background-color: #f6f3fc;
+    border: 1px solid #f6f3fc;
+    border-radius: 24px;
+    transition: all 300ms ease-in-out;
+  }
+
+  div.my_skill_item img {
+    width: 60px;
+    -webkit-filter: grayscale(90%);
+    transition: all 300ms ease-in-out;
+  }
+  div.my_skill_item span {
+    font-size: 20px;
+    font-weight: 800;
+    color: #747779;
+    transition: all 300ms ease-in-out;
+  }
+
+  div.my_skill_item:hover img {
+    -webkit-filter: grayscale(0%);
+    scale: 1.1;
+  }
+
+  div.my_skill_item:hover span {
+    color: var(--mrl-primery-color);
+  }
+
+  div.my_skill_item:hover div {
+    border: 1px solid var(--mrl-primery-color);
+    background-color: var(--mrl-secondery-color);
+  }
 }
