--- a/css/partials/mobile.css
+++ b/css/partials/mobile.css
@@ -471,14 +471,15 @@
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     flex-direction: row;
     padding: 64px 0px;
     flex-wrap: wrap;
+    gap: 24px;
   }
 
   div.hs_experience > div {
-    width: 50%;
+    width: 45%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -487,7 +488,7 @@
   }
 
   div.hs_experience > div > span:nth-child(1) {
-    font-size: 60px;
+    font-size: 28px;
     font-weight: 800;
     letter-spacing: 8px;
     font-feature-settings: "lnum" 0;
@@ -567,22 +568,25 @@
 
   div.serv_item {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
-    align-items: center;
+    align-items: start;
+    gap: 16px;
     height: 100%;
-    padding: 34px 16px;
+    padding: 24px 16px;
     transition: all 300ms ease-in-out;
     color: var(--mrl-primery-color);
     border-bottom: 1px solid #dddddd;
+    position: relative;
   }
 
   div.serv_name {
-    width: 30%;
+    width: 100%;
     height: 100%;
     display: flex;
     justify-content: right;
     align-items: center;
-    gap: 32px;
+    gap: 16px;
   }
 
   div.serv_name > span {
@@ -598,7 +602,7 @@
   }
 
   div.serv_info {
-    width: 65%;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -612,7 +616,10 @@
   }
 
   div.serv_info > i {
-    font-size: 48px;
+    position: absolute;
+    left: 24px;
+    top: 24px;
+    font-size: 40px;
     transform: rotate(-45deg);
     color: var(--mrl-primery-color);
     transition: all 400ms ease-in-out;
@@ -625,7 +632,7 @@
   div.serv_selector {
     position: absolute;
     width: 100%;
-    height: 109px;
+    /* height: 109px; */
     background: linear-gradient(
       260deg,
       var(--mrl-primery-color) 0%,
@@ -726,7 +733,7 @@
   }
 
   ul.my_job_items > li {
-    padding: 0px 16px;
+    padding: 0px 8px;
     z-index: 2;
     cursor: pointer;
     transition: all 400ms ease-in-out;
@@ -735,6 +742,7 @@
     align-items: center;
     justify-content: center;
     width: fit-content;
+    font-size: 14px;
   }
 
   .my_job_menu_active {
@@ -743,7 +751,7 @@
 
   div.my_job_selector {
     height: 36px;
-    width: 58px;
+    width: 42px;
     transform-origin: center center;
     position: absolute;
     background: linear-gradient(
@@ -753,7 +761,7 @@
     );
     border-radius: 100px;
     z-index: 1;
-    left: 371px;
+    left: 308px;
     top: 8px;
     transition: all 300ms ease-in-out;
   }
@@ -962,5 +970,164 @@
   div.my_skill_item:hover div {
     border: 1px solid var(--mrl-primery-color);
     background-color: var(--mrl-secondery-color);
+  }
+
+  /* my comment section -------------------------------------------------- */
+  section.my_comment {
+    width: 100%;
+    padding: 80px 0px;
+    background-color: #f6f3fc;
+  }
+
+  div.my_comment_holder {
+    width: 100%;
+    padding: 0px 24px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 100px;
+  }
+
+  div.my_comment_header {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+  }
+
+  div.my_comment_header > h2 {
+    font-size: 30px;
+    background: linear-gradient(
+      260deg,
+      var(--mrl-secondery-color) 0%,
+      var(--mrl-primery-color) 100%
+    );
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+  div.my_comment_header > p {
+    font-size: 16px;
+    color: #140c1c;
+    text-align: center;
+  }
+
+  div.my_comment_slider {
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    justify-content: left;
+    overflow: hidden;
+  }
+
+  .swiper {
+    width: 100%;
+    height: 100%;
+    overflow: visible !important;
+    overflow-x: hidden;
+  }
+
+  .swiper-slide {
+    width: 100%;
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    display: flex;
+    gap: 16px !important;
+    border-radius: 24px;
+    padding: 24px;
+    cursor: grab;
+    user-select: none;
+  }
+
+  .swiper_item_holder {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: start;
+    gap: 16px;
+  }
+
+  .swiper_item_holder > p {
+    color: #140c1c;
+    font-size: 16px;
+    text-align: right;
+  }
+
+  .swiper-slide > div.my_comment_info {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    align-items: start;
+    justify-content: right;
+    gap: 4px;
+  }
+
+  div.my_comment_info > h4 {
+    font-size: 18px;
+    color: var(--mrl-secondery-color);
+  }
+
+  div.my_comment_info > span {
+    font-size: 14px;
+    color: #140c1c;
+  }
+
+  div.my_comment-icon {
+    display: flex;
+    align-items: center;
+    justify-content: right;
+    gap: 2px;
+  }
+
+  div.my_comment-icon > i {
+    width: 20px !important;
+    height: 20px !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+    color: var(--mrl-primery-color);
+  }
+
+  div.my_comment-icon > i:nth-child(2) {
+    rotate: 180deg;
+    transform-origin: center center;
+    transition: all 300ms ease-in-out;
+  }
+
+  .swiper-slide-active div.my_comment-icon > i:nth-child(2) {
+    rotate: 270deg;
+    transform-origin: left top;
+  }
+
+  .swiper-slide img {
+    display: block;
+    width: 100px !important;
+    object-fit: cover;
+    border-radius: 3px 3px 100px 3px;
+  }
+
+  .swiper-pagination {
+    position: unset !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+    padding: 16px 0px;
+  }
+
+  .swiper-pagination-bullet {
+    background-color: #747779 !important;
+    width: 8px !important;
+    height: 8px !important;
+    margin: 0px !important;
+  }
+
+  .swiper-pagination-bullet-active {
+    background-color: var(--mrl-primery-color) !important;
   }
 }
