fixed monile menu bug and optimized mobile UI

--- a/css/partials/desktop.css
+++ b/css/partials/desktop.css
@@ -211,6 +211,10 @@
     animation: text_stroke 4s;
   }
 
+  div.hs_heading_mobile {
+    display: none;
+  }
+
   div.hs_heading {
     width: 100%;
     display: flex;
