--- a/css/partials/tablet.css
+++ b/css/partials/tablet.css
@@ -200,13 +200,14 @@
   div.dropdown_menu {
     position: absolute;
     top: 100%;
-    width: 100%;
-    height: fit-content;
+    left: 0;
+    width: 0;
+    height: 0;
     background-color: var(--mrl-secondery-color);
-    z-index: 999;
+    z-index: 100;
     border-radius: 24px;
-    padding: 24px 48px;
     transition: all 300ms ease-in-out;
+    overflow: hidden;
   }
 
   div.dropdown_menu > ul {
@@ -216,6 +217,7 @@
     align-items: start;
     flex-direction: column;
     gap: 16px;
+    overflow: hidden;
   }
 
   div.dropdown_menu > ul > a {
@@ -223,7 +225,7 @@
     font-size: 18px;
     position: relative;
     padding: 12px 24px;
-    background: #000;
+    transition: all 300ms ease-in-out;
   }
 
   div.dropdown_menu > ul > a::before {
@@ -236,12 +238,16 @@
     height: 4px;
     border-radius: 10px;
     background-color: #fff;
+    transition: all 300ms ease-in-out;
   }
 
-  /* 
   div.dropdown_menu > ul > a:hover {
-    color: var(--mrl-primery-color);
-  } */
+    padding-right: 36px;
+  }
+
+  div.dropdown_menu > ul > a:hover::before {
+    width: 24px;
+  }
 
   main.main > div {
     width: 100%;
@@ -316,6 +322,10 @@
     font-size: 320px;
     display: flex;
     animation: text_stroke 4s;
+  }
+
+  div.hs_heading_mobile {
+    display: none;
   }
 
   div.hs_heading {
